src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-dwU-b-t.snap
---
source: src/tests/window_opening.rs
description: "config:\nwindow-rule {\n    open-fullscreen false\n    open-maximized true\n    default-column-width {  }\n    border { on; }\n    default-column-display \"tabbed\"\n}\n\nlayout {\n    tab-indicator {\n        place-within-column\n    }\n}"
expression: snapshot
---
initial configure:
size: 1240 × 680, bounds: 1240 × 680, states: []

post-map configures:
size: 1240 × 680, bounds: 1240 × 680, states: [Activated]
